[gd_scene load_steps=18 format=2]

[ext_resource path="res://Entities/arrow_turret/arrow_turret.gd" type="Script" id=1]
[ext_resource path="res://Components/sprite/entity_sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/arrow_turret/arrow_turret_base.png" type="Texture" id=3]
[ext_resource path="res://Components/held_item/held_item.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/arrow_turret/arrow_turret_bow.png" type="Texture" id=5]
[ext_resource path="res://Components/brain/brain.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/hurtbox/hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Entities/arrow_turret/arrow_turret_destroy.wav" type="AudioStream" id=8]
[ext_resource path="res://Components/stats/stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://Components/entity_push/entity_push.tscn" type="PackedScene" id=10]
[ext_resource path="res://Effects/entity_effects/entity_effects.tscn" type="PackedScene" id=11]
[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=12]
[ext_resource path="res://Components/health_bar/health_bar.tscn" type="PackedScene" id=13]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true

[sub_resource type="Animation" id=2]
resource_name = "custom"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 28.84, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0.1, -0.3 ), Vector2( 0.2, 0.3 ), Vector2( -0.1, 0 ), Vector2( 0.12, -0.3 ), Vector2( 0, 0.22 ), Vector2( 0, -0.17 ), Vector2( -0.1, 0.08 ), Vector2( -0.05, -0.02 ), Vector2( -0.04, 0.2 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 1.29523
height = 6.91156

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.08213
height = 4.16797

[node name="arrow_turret" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
ACCELERATION = 0
SLOWDOWN = 200
FORCE_MULT = 0.2
truName = "arrow_turret"
faction = "blue_kingdom"
charge_speed = 0.6

[node name="stats" parent="." instance=ExtResource( 9 )]
MAX_HEALTH = 3
HEALTH = 3
DAMAGE = 2
poison_modifier = -99.0
burning_modifier = 1.5
bleed_modifier = -99.0
speed_modifier = -99.0
slowness_modifier = -99.0
regeneration_modifier = -99.0
resistance_modifier = -99.0
infection_modifier = -99.0

[node name="entity_sprite" parent="." instance=ExtResource( 2 )]
show_behind_parent = true
material = SubResource( 1 )
position = Vector2( 0.5, 0 )
texture = ExtResource( 3 )
auto_flip_mode = 0

[node name="shadow" parent="entity_sprite" index="0"]
position = Vector2( 0, 0.5 )

[node name="held_item" parent="." instance=ExtResource( 4 )]
position = Vector2( 1, -3 )
TARGETING = 1
DEFAULT_HFRAMES = 4

[node name="anchor" parent="held_item" index="0"]
position = Vector2( 0, 0 )

[node name="sprite" parent="held_item/anchor" index="0"]
texture = ExtResource( 5 )
hframes = 4

[node name="AnimationPlayer" parent="held_item" index="1"]
anims/custom = SubResource( 2 )

[node name="brain" parent="." instance=ExtResource( 6 )]
TOLERANCE = 20
SIGHT_RANGE = 170.0
MAX_TARGETS = 1
COMMUNICATES = false

[node name="hurtbox" parent="." instance=ExtResource( 7 )]
KILLED_SOUND = ExtResource( 8 )

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )

[node name="entity_push" parent="." instance=ExtResource( 10 )]
visible = false
strength = 25

[node name="CollisionShape2D" parent="entity_push" index="0"]
shape = SubResource( 5 )

[node name="entity_effects" parent="." instance=ExtResource( 11 )]
death_type = -1
impact_particles = false

[node name="sound_player" parent="." instance=ExtResource( 12 )]
FREE_WHEN_EMPTY = false

[node name="health_bar" parent="." instance=ExtResource( 13 )]
margin_left = -9.86993
margin_top = -11.0508
margin_right = 11.1301
margin_bottom = -7.0491

[connection signal="animation_finished" from="held_item/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="found_target" from="brain" to="." method="_on_brain_found_target"]

[editable path="entity_sprite"]
[editable path="held_item"]
[editable path="hurtbox"]
[editable path="entity_push"]
